--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "asciidoctor-readthedocs-theme"]
-	path = asciidoctor-readthedocs-theme
+	path = src/readthedocs
 	url = https://github.com/uroesch/asciidoctor-readthedocs-theme.git
